# django-add-default-value

./: .gitignore  CONTRIBUTING.rst  Pipfile  README.md  README.rst  setup.cfg  setup.py  tox.ini
django-add-default-value/: add_default_value.py
django_add_default_value/: __init__.py  add_default_value.py
test_project/: .travis.yml  manage.py
test_project/dadv/: apps.py  models.py
test_project/dadv/migrations/: 0001_initial.py  0002_testtextdefault.py  0003_testhappypath.py  0004_time_related_fields.py  0005_testcustomcolumnname.py
test_project/test_project/: settings.py  settings_crdb.sample.py  settings_mssql.sample.py  settings_mysql.sample.py  settings_pgsql.sample.py  urls.py  wsgi.py
test_project/tests/: __init__.py
