[bumpversion]
current_version = 0.8.0
commit = True
tag = True
tag_name = {new_version}

[metadata]
name = django-add-default-value
description = This django Migration Operation can be used to transfer a fields default value to the database scheme.
long_description = file:README.md
url = https://github.com/3YOURMIND/django-add-default-value
author = 3YOURMIND GmbH
license = Apache-2.0
classifiers =
	Development Status :: 3 - Alpha
	Intended Audience :: Developers
	Environment :: Web Environment
	Framework :: Django
	Framework :: Django :: 1.11
	Framework :: Django :: 2.0
	Framework :: Django :: 2.1
	Framework :: Django :: 2.2
	Framework :: Django :: 3.0
	Framework :: Django :: 3.1
	Framework :: Django :: 3.2
	License :: OSI Approved :: Apache Software License
	Programming Language :: Python
	Programming Language :: Python :: 2
	Programming Language :: Python :: 3
	Programming Language :: Python :: 3.4
	Programming Language :: Python :: 3.5
	Programming Language :: Python :: 3.6
	Programming Language :: Python :: 3.7
	Programming Language :: Python :: 3.8
	Programming Language :: Python :: 3.9
	Topic :: Software Development :: Libraries :: Python Modules
keywords =
	django
	migration
	default
	database backward compatibility

[options]
install_requires =
	Django>=1.11
tests_require =
	tox
	coverage
	flake8

[bumpversion:file:setup.py]

